--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -40,10 +40,12 @@ body {
   border-top-right-radius: 10px;
 }
 
-.container-seat {
-  margin-bottom: 25px;
+.container {
+  margin-bottom: 30px;
   perspective: 1000px;
+  max-width: 200px;
 }
+
 .seat.selected {
   background-color: #6feaf6;
 }
